3891
I wonder whether something as simple as this could be a fix: https://github.com/scalamacros/kepler/commit/54e96697e12c893013758346ea157bef3477a9fd. Let's see whether Jenkins agrees with me: https://scala-webapps.epfl.ch/jenkins/job/scala-checkin-manual/962/console.

Just for the record. Apart those scaladoc tests failing and blocking the build, we have only three failing tests in the main test suite, all coming from neg:
```scala
22:58 ~/Projects/Kepler_7692 (ticket/7692)$ t

Testing individual files
testing: [...]/files/neg/divergent-implicit.scala                     [FAILED]
testing: [...]/files/neg/t5578.scala                                  [FAILED]
--- divergent-implicit-neg.log
+++ divergent-implicit.check
@@ -9,10 +9,8 @@
                                     ^
-divergent-implicit.scala:14: error: type mismatch;
- found   : Test2.Foo
- required: Test2.Bar
+divergent-implicit.scala:14: error: diverging implicit expansion for type Test2.Baz => Test2.Bar
+starting with method baz2bar in object Test2
   val x: Bar = new Foo
                ^
-divergent-implicit.scala:15: error: type mismatch;
- found   : Test2.Baz
- required: Test2.Bar
+divergent-implicit.scala:15: error: diverging implicit expansion for type Test2.Foo => Test2.Bar
+starting with method foo2bar in object Test2
   val y: Bar = new Baz--- t5578-neg.log
+++ t5578.check
@@ -1,5 +1,2 @@
-t5578.scala:33: error: type mismatch;
- found   : NumericOpsExp.this.Plus[T]
- required: NumericOpsExp.this.Rep[T]
-    (which expands to)  NumericOpsExp.this.Exp[T]
+t5578.scala:33: error: No Manifest available for T.
   def plus[T: Numeric](x: Rep[T], y: Rep[T]): Rep[T] = Plus[T](x,y)
testing: [...]/files/neg/t5845.scala                                  [FAILED]
```
